@@ -4,6 +4,7 @@ import("methods")
 importFrom("Rcpp", "Rcpp.plugin.maker", "sourceCpp")
 importFrom("stats", "sd")
 importFrom("graphics", "par", "plot", "lines", "legend")
+importFrom("utils", "compareVersion")
 
 useDynLib("RQuantLib")
 
